--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.ProductDetailsActivity" />
+        <activity android:name=".activity.SetupRoomActivity" />
     </application>
 
 </manifest>
