--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.ProductDetailsActivity" />
+        <activity android:name=".activity.ProductDetailsReadOnlyActivity" />
         <activity android:name=".activity.SetupRoomActivity" />
         <activity android:name=".activity.ui.login.LoginActivity" />
     </application>
