--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".activity.ProductDetailsReadOnlyActivity" />
         <activity android:name=".activity.SetupRoomActivity" />
         <activity android:name=".activity.ui.login.LoginActivity" />
+        <activity android:name=".activity.RequestsActivity" />
     </application>
 
 </manifest>
